--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ nav{
 
 .card{
   margin-bottom: 30px;
-  box-shadow: 5px 10px #03202e;
+  box-shadow: 10px 10px #03202e;
+  margin: 0px 20px;
 }
 
 .card img{
